-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 270106) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

xx062006 (v2.4.5)  -** stable release **-
	- added: ability to compile without a readline library (will
	         disable the curses based console user-interface)
	- removed: readline-4.0 subdir from the dist package; system
	           readline library is now the only option
27012006 (v2.4.4)  -** stable release **-
	- added: eiam - ai-describe, ao-describe, cop-describe and
	         ctrl-describe commands; see ecasound-iam(1)
	- added: ecasignalview - ability to pass ecasound options
		 -G, -B, -M*, -r and -z
	- added: BUGS file - added 'Reporting bugs' section
	- added: updated RPM spec-file for x86_64 support [grabner]
	- changed: minor changes to ecaplay console output
	- changed: ECI C impl. - increased the time engine has
		   for processing ECI commands; fixes problems
		   with the 'cs-disconnect' command with complex
		   setups involving connections to external 
		   resources such as jackd
	- changed: error is raised if one tries to add chainops or 
		   controllers when multiple (or zero) chains are 
		   selected
	- changed: increased size of buffers used by the ECI-C 
		   parser (sfbug:1412409) [allies]
	- changed: it's now possible to set initial values for
		   operator parameters controlled by MIDI-CCs
	- fixed: compile-time bug in ecasignalview.cpp